oublie / pour IHM

--- a/main.html
+++ b/main.html
@@ -79,10 +79,10 @@
 	<fieldset class="skybox">
 		<legend><FONT size="4px">Skybox</FONT></legend>
 		<select name="skybox">
-			<option value="SanFrancisco3">San Francisco </option>
-			<option value="FishermansBastion">Fishermans Bastion </option>
-			<option value="Colosseum">Colosseum </option>
-			<option value="Medborgarplatsen">Medborgarplatsen </option>
+			<option value="SanFrancisco3/">San Francisco </option>
+			<option value="FishermansBastion/">Fishermans Bastion </option>
+			<option value="Colosseum/">Colosseum </option>
+			<option value="Medborgarplatsen/">Medborgarplatsen </option>
 		</select>
 	</fieldset>
 
