--- a/main.html
+++ b/main.html
@@ -72,17 +72,19 @@
 		<input type='radio' name="object" value="bunny" checked/><label for="bunny">Bunny</label>
 		<input type='radio' name="object" value="mustang"/><label for="mustang"></label>Mustang</label>
 		<input type='radio' name="object" value="porsche"/><label for="porsche"></label>Porsche</label>
-		<input type='radio' name="sphere" value="sphere"/><label for="sphere"></label>Sphere</label>
+		<input type='radio' name="object" value="sphere"/><label for="sphere"></label>Sphere</label>
 	</fieldset>
 
 	<!-- Changement de la skybox -->
 	<fieldset class="skybox">
 		<legend><FONT size="4px">Skybox</FONT></legend>
 		<select name="skybox">
-			<option value="SanFrancisco3/">San Francisco </option>
-			<option value="FishermansBastion/">Fishermans Bastion </option>
 			<option value="Colosseum/">Colosseum </option>
+			<option value="FishermansBastion/">Fishermans Bastion </option>
 			<option value="Medborgarplatsen/">Medborgarplatsen </option>
+			<option value="Park/">Park </option>
+			<option value="SanFrancisco3/" checked>San Francisco </option>
+			<option value="Skansen/">Skansen </option>
 		</select>
 	</fieldset>
 
