Finish link IHM to shader modifications

--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
 	<!-- Changement de la couleur de l'objet -->
 	<fieldset class="couleur">
 		<legend><FONT size="4px">Object color</FONT></legend>
-		<select name="couleur">
+		<select id="couleur" name="couleur">
 			<option value="bleu" style="color:white; background:blue">Blue </option>
 			<option value="noir" style="color:white; background:black" >Black </option>
 			<option value="marron" style="color:white; background:brown" >Brown </option>
